  allowing the server to pick a good page in the house list based on the
  player's current house value.  The player can then scroll freely up and down
  from there (thanks Iceman).

--Running an empty search on the house list page now returns you to your value
  neighborhood on the house list instead of jumping back to the top of the list
  (thanks Jere).



Version 31a  Live Server Fixes

--Server support for returning a starting house list page around the player's
  house value (auto-setting how many houses on the list to skip if the client
  provides no skip value).  This works with v32 clients to auto-set the first
  house page shown, but is also backwards compatible with v31 clients.

--Added retry for deadlock on chilling_houses table when creating a new house.

--Added retry for deadlock on chilling_houses in flush call.

--Added work-around for strange, rare issue of house maps missing from the map
  cache table at the end of a robbery only to show up in that table later
  (maybe from an edit that ends right before the robbery).





Version 31a   2014-January-31

--Unix Source bundle update.

(Includes all Live Server Fixes listed below.)




Version 31  Live Server Fixes

--Added a bunch of stats to the admin view.

--Added current-active-user count stat harvesting to every flush call.

--Fixed a deadlock in ping_house by retrying after a deadlock.

--Added a 5-minute delay before a new house goes on the house list to thwart
  the prevalence of farming neglected starter homes in the 2000-bracket on the
  house list.

--Added tracking of total daily connections stats.

--Fixed server source so that it can be installed on a fresh database without
  throwing database errors (thanks Mike H).

--Fixed deprecated call-by-reference warnings (thanks Mike H).





Version 31   2014-January-28

--Added a custom reason-for-shutdown message sent by the server that the client
  displays.

--Added pending shutdown warnings to the ping and self-test protocols.  The